--- a/miranda.html
+++ b/miranda.html
@@ -65,8 +65,8 @@
                                 <div class="typed-text">Student, Student, Student, Student, Student</div>
                             </div>
                             <div class="hero-btn">
-                                <a class="btn" href="">Follow Me</a>
-                                <a class="btn" href="">Contact Me</a>
+                                <a class="btn" href="https://www.instagram.com/xyzm.ravx_/">Follow Me</a>
+                                <a class="btn" href="https://www.instagram.com/xyzm.ravx_/">Contact Me</a>
                             </div>
                         </div>
                     </div>
@@ -195,11 +195,11 @@
             <div class="container-fluid">
                 <div class="container">
                     <div class="footer-info">
-                        <h2>Miranda Purtri Wulandari</h2>
+                        <h2>Miranda Putri Wulandari</h2>
                         <h3>Yogyakarta, Sleman, Indonesaia</h3>
                         <div class="footer-menu">
                             <p>+62 859-3559-76868</p>
-                            <p>@gmail.com</p>
+                            <p>mirandaputriw@gmail.com</p>
                         </div>
                         <div class="footer-social">
                             <a href=""><i class="fab fa-twitter"></i></a>
